--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
         <relativePath/>
     </parent>
 
-    <name>bitmove-eureka</name>
-    <artifactId>bitmove-eureka</artifactId>
+    <name>bitmove_eureka</name>
+    <artifactId>bitmove_eureka</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
