--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
         <relativePath/>
     </parent>
 
-    <name>bitmove_eureka</name>
-    <artifactId>bitmove_eureka</artifactId>
+    <name>bbis_eureka</name>
+    <artifactId>bbis_eureka</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
@@ -71,7 +71,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>cn.bitmove.eureka.EurekaApplication</mainClass>
+                    <mainClass>top.bbis.eureka.EurekaApplication</mainClass>
                 </configuration>
                 <executions>
                     <execution>
