统一一下名称

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # 服务
 server.port=8888
-spring.application.name=eureka
+spring.application.name=bbis-eureka
 # 注册
 eureka.instance.hostname=127.0.0.1
 eureka.client.register-with-eureka=false
